Interpreter/Examples/bad/example4.jam
/* Not handling exceptions - breaks program */
main {
    0/0;
}
